--- a/template7 - drone2/css/main.css
+++ b/template7 - drone2/css/main.css
@@ -103,6 +103,11 @@ header {
   
     & ul {
       display: flex;
+
+      & li {
+        display: grid;
+        place-items: center
+      }
     }
 
     & .site-links {
